commit_2 funny_jokes

--- a/app/views/static_pages/page2.html.erb
+++ b/app/views/static_pages/page2.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#page2</h1>
-<p>Find me in app/views/static_pages/page2.html.erb</p>
+
+<div class="container">
+  <button class="btn btn-outline-success" onclick="count(@counter)">Lets count!</button>
+</div>
