--- a/app/views/static_pages/page3.html.erb
+++ b/app/views/static_pages/page3.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#page3</h1>
-<p>Find me in app/views/static_pages/page3.html.erb</p>
+
+<div class="container">
+  <div id="111">
+
+  </div>
+  <input type="button" class="btn btn-success" value="click me!" onclick="jokes()">
+</div>
+<script src="page3.js"></script>
