commit_3 range_input / some refactoring added

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -3,3 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "bootstrap";
 
+#grdv {
+  height: 20px;
+  width: 20px;
+  background: green;
+};
