--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
       <div class="row">
         <%= link_to 'ColoRed', home_path, { :onclick => "paint_it(this, '#990000')" } %>
         <span>&nbsp</span>
-        <%= link_to 'page1', page1_path, { :onclick => "paint_it(this, '#990000')" } %>
+        <%= link_to 'page1', page1_path %>
+        <%= link_to 'page2', page2_path %>
+        <%= link_to 'page3', page3_path %>
       </div>
     </div>
   </div>
