--- a/app/views/static_pages/page2.html.erb
+++ b/app/views/static_pages/page2.html.erb
@@ -1,4 +1,25 @@
 
 <div class="container">
-  <button class="btn btn-outline-success" onclick="count(@counter)">Lets count!</button>
+  <div id="nav">
+    <div class="menu-item">
+      menu_1
+      <div class="submenu">
+        submenu
+      </div>
+    </div>
+    <div class="menu-item">
+      menu_2
+      <div class="submenu">
+        submenu
+      </div>
+    </div>
+    <div class="menu-item">
+      menu_3
+      <div class="submenu">
+        submenu
+      </div>
+    </div>
+  </div>
 </div>
+
+<script src="page2.js"></script>
