drop-down menu htlm/css added

--- a/app/views/static_pages/page2.html.erb
+++ b/app/views/static_pages/page2.html.erb
@@ -5,20 +5,17 @@
       menu_1
       <div class="submenu">
         submenu
-      </div>
-    </div>
+      </div></div>
     <div class="menu-item">
       menu_2
       <div class="submenu">
         submenu
-      </div>
-    </div>
+      </div></div>
     <div class="menu-item">
       menu_3
       <div class="submenu">
         submenu
-      </div>
-    </div>
+      </div></div>
   </div>
 </div>
 
