--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <%= link_to 'page1', page1_path %>
         <%= link_to 'page2', page2_path %>
         <%= link_to 'page3', page3_path %>
+        <%= link_to 'page4', page4_path %>
       </div>
     </div>
   </div>
